# mini-demos

./: LICENSE  README.md
adaptive-radix-tree/art7/: Cargo.toml
ai/ollama-client-rs/: Cargo.toml
arena/src/: arena.rs  error.rs  lib.rs
art/src/: lib.rs  tree.rs
art1/: Cargo.toml
art1/src/: leaf_node.rs  node256.rs
art2/: Cargo.toml
art2/src/: inner.rs  node.rs
art3/src/: lib.rs
artc/: Cargo.toml
artc/src/: lib.rs  node.rs
async-rt/: Cargo.toml
async-rt/src/: main.rs
async-trait/: Cargo.toml
async-trait/src/: main.rs
async_rt/rust_async_rt/: Cargo.toml
block-builder/: Cargo.toml
block-builder/src/: lib.rs
bloom-filter/src/: lib.rs
co_snapshot/: Cargo.toml
co_snapshot/src/: main.rs
computer-grapthics/ray-tracing-rs/: Cargo.toml
cs-ai/: Program.cs  cs-ai.csproj  cs-ai.sln
data_structures/skip_list/: Cargo.toml
data_structures/skip_list2/: Cargo.toml
design-patterns/: Cargo.toml
design-patterns/publish-subscribe/: Cargo.toml
desktop_app/selected-text/: Cargo.toml  README.md
desktop_app/selected-text/examples/: basic.rs
desktop_app/selected-text/src/: lib.rs  windows.rs
diff-rt/: Cargo.toml
diff-rt/src/: main.rs
ebr/: Cargo.toml
ebr/src/: main.rs
fake-fs/: Cargo.toml
fake-fs/src/: lib.rs  memory.rs  native.rs  options.rs
io-uring/: io-uring.md
io-uring/src/: lib.rs
io_uring/io-uring/: Cargo.toml
io_uring/io_uring_iopoll/: .gitignore  Cargo.toml
io_uring/rio-demo/: .gitignore
lru/src/: lib.rs
mmap/: .gitignore  Cargo.toml
mmap/src/: main.rs
mutil_threads/mpsc-worker/: Cargo.toml
mutil_threads/opt-lock/: Cargo.toml
mvcc/: Cargo.toml
mvcc/src/: main.rs
optimistic_lock/: Cargo.toml
powerful-toys/: Cargo.toml
powerful-toys/src/: either.rs  lib.rs  map_async.rs  maybe.rs
rio-demo/: .gitignore  Cargo.toml
rio-demo/src/: main.rs
rust2024-demo/: Cargo.toml
simd/: Cargo.toml
simd/benches/: find.rs
simd/src/: lib.rs
skip_list/src/: allocator.rs  lib.rs
storage/io_uring_rt/: Cargo.toml  README.md
storage/io_uring_rt/benches/: read.rs
storage/io_uring_rt/examples/: cat.rs
storage/io_uring_rt/others/: Cargo.toml
storage/io_uring_rt/others/benches/: io_uring_multi_read.rs
storage/io_uring_rt/src/: lib.rs
storage/io_uring_rt/src/uring/: driver.rs  mod.rs  op.rs  prelude.rs  rt.rs
storage/io_uring_rt/src/uring/fs/: close.rs  cread_dir_all.rs  file.rs  fsync.rs  metadata.rs  mkdir_at.rs  mod.rs  open.rs  open_options.rs  read.rs  removed.rs  rename.rs  shared_fd.rs  write.rs
storage/io_uring_rt/src/utils/: mod.rs  slab.rs
storage/rust_io_uring/: Cargo.toml
sync-impl/: Cargo.toml
sync-impl/src/: arc.rs
to-pin/: Cargo.toml
to-pin/src/: main.rs
trait_defalut_impl/: Cargo.toml
trait_defalut_impl/src/: main.rs
two-async/: Cargo.toml
value-log/: Cargo.toml
value-log/src/: lib.rs  vlog_file.rs
version_mgr/: Cargo.toml
version_mgr/src/: main.rs
vlaue_log/vlog/: Cargo.toml
web/requests/: Cargo.toml  config.toml
(+48 files in other folders)
