[package]
name = "async-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = "0.3.31"
itertools = "0.14.0"
parking_lot = "0.12.3"
pin-project = "1.1.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
