[package]
name = "async-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = "0.3.31"
io-uring = "0.7.4"
itertools = "0.14.0"
nix = { version = "0.29.0", features = ["process"] }
parking_lot = "0.12.3"
pin-project = "1.1.10"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
