[package]
edition = "2024"
name = "selected-text"
version = "0.1.0"

[dependencies]
arboard = "3.5.0"
cfg-if = "1.0.0"
enigo = "0.3.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.61.1", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_DataExchange",
  "Win32_UI_Accessibility",
  "Win32_System_Com",
]}
